testando a responsividade com scss

--- a/index.html
+++ b/index.html
@@ -14,18 +14,25 @@
         <div class="ativo">
             <span>Home</span>
         </div>
-        <div class="menu">
-            <ul>
-                <li>Blog</li>
-                <li>Issues</li>
-                <li>Team</li>
-                <li>About us</li>
-            </ul>
+        <div class="mobile-menu">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
         </div>
-        <div class="user">
-            <button class="btn1">Login</button>
-            <button class="btn2">Sing Up</button>
-        </div>
+        <div class="menu_total">
+            <div class="menu">
+                <ul class="nav-list">
+                    <li>Blog</li>
+                    <li>Issues</li>
+                    <li>Team</li>
+                    <li>About us</li>
+                    <div class="user">
+                        <button class="btn1">Login</button>
+                        <button class="btn2">Sing Up</button>
+                    </div>
+                </ul>
+            </div>
+
     </header>
 
     <div class="caixa">
@@ -38,6 +45,10 @@
             <img src="computador.webp" alt="">
         </div>
     </div>
+    </div>
 </body>
 
 </html>
+<script src="menu.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
